--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "matchmaker-ts",
-  "version": "0.1.0",
+  "name": "@flashbots/matchmaker-ts",
+  "version": "0.0.1",
   "description": "Matchmaker client library for Flashbots mev-share.",
   "main": "build/index.js",
   "repository": "https://github.com/flashbots/matchmaker-ts",
