--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/eventsource": "^1.1.11",
     "@types/node": "^18.14.4",
     "dotenv": "^16.0.3",
+    "release-it": "^15.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
