--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
   "repository": "https://github.com/flashbots/matchmaker-ts",
   "author": "zeroXbrock",
   "license": "MIT",
+  "dependencies": {
+    "async-mutex": "^0.4.0",
+    "axios": "^1.3.4",
+    "eventsource": "^2.0.2"
+  },
   "devDependencies": {
     "@types/eventsource": "^1.1.11",
     "@types/node": "^18.14.4",
     "dotenv": "^16.0.3",
+    "ethers": "^6.1.0",
     "release-it": "^15.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "ethers": "^6.1.0"
   },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example.tx": "ts-node src/examples/sendTx.ts",
     "example.backrun": "ts-node src/examples/sendBackrunBundle.ts"
-  },
-  "dependencies": {
-    "async-mutex": "^0.4.0",
-    "axios": "^1.3.4",
-    "ethers": "^6.1.0",
-    "eventsource": "^2.0.2"
   }
 }
