run linter in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,3 +22,5 @@ jobs:
         run: yarn install
       - name: Build package
         run: yarn build
+      - name: Lint source code
+        run: yarn lint
