--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "async-mutex": "^0.4.0",
     "axios": "^1.3.4",
-    "eventsource": "^2.0.2"
+    "eventsource": "^2.0.2",
+    "ethers": "^6.1.0"
   },
   "devDependencies": {
     "@types/eventsource": "^1.1.11",
