--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "async-mutex": "^0.4.0",
     "axios": "^1.3.4",
-    "eventsource": "^2.0.2",
-    "ethers": "^6.1.0"
+    "ethers": "^6.3.0",
+    "eventsource": "^2.0.2"
   },
   "devDependencies": {
     "@types/eventsource": "^1.1.11",
@@ -19,13 +19,12 @@
     "@typescript-eslint/parser": "^5.56.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
-    "ethers": "^6.1.0",
     "release-it": "^15.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "ethers": "^6.1.0"
+    "ethers": "^6.3.0"
   },
   "scripts": {
     "build": "tsc",
