--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "release-it": "^15.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
