--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "async-mutex": "^0.4.0",
     "axios": "^1.3.4",
-    "ethers": "^6.5.1",
     "eventsource": "^2.0.2"
   },
   "devDependencies": {
@@ -20,9 +19,13 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "ethers": "^6.5.1",
     "release-it": "^15.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "ethers": "^6.5.1"
   },
   "scripts": {
     "build": "tsc",
