--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@types/eventsource": "^1.1.11",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^10.0.2",
     "@types/node": "^18.14.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -20,16 +22,18 @@
     "eslint": "^8.36.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "ethers": "^6.5.1",
+    "mocha": "^10.2.0",
     "release-it": "^15.8.0",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "ethers": "^6.5.1"
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"no test specified\" && exit 0",
+    "test": "ts-mocha -p ./tsconfig.json src/tests/*.spec.ts",
     "lint": "eslint src/*.ts src/**/*.ts",
     "example.backrun": "ts-node src/examples/sendBackrunBundle.ts",
     "example.composableBundle": "ts-node src/examples/sendComposableBundle.ts",
